--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "root": true,
   "ignorePatterns": ["!**/*"],
+  "parserOptions": { "ecmaVersion": "latest" },
   "plugins": ["@nx"],
+  "env": { "es6": true },
   "overrides": [
     {
       "files": ["*.ts"],
