--- a/project.json
+++ b/project.json
@@ -48,6 +48,7 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": { "port": 4250 },
       "configurations": {
         "production": {
           "browserTarget": "signals-tester:build:production"
